2013-04-28  Eli Zaretskii  <eliz@gnu.org>

	* dir.c (local_stat) [WINDOWS32]: Use the wrapper on MS-Windows.
	If the argument ends in "dir/.", make sure the parent dir exists
	and is indeed a directory.  Fixes Savannah bug #37065.

2013-04-28  Paul Smith  <psmith@gnu.org>

	* makeint.h (message_s, error_s): Functions that print to strings
	rather than directly to files.
	* misc.c (message_s, error_s): Create them.
	* job.c (child_error): Print error messages to the output sync
	logs, if one exists, rather then directly to the terminal.
	(reap_children): Move the per-line sync after child_error().

	* configure.ac: Remove support for pre-ANSI variadic function calls.
	* makeint.h: Ditto.
	* misc.c: Ditto.
	* config.ami.template: Ditto.
	* config.h-vms.template: Ditto.
	* config.h.W32.template: Ditto.
	* configh.dos.template: Ditto.

	Implement a "per-job" output synchronization option.

	* main.c (decode_output_sync_flags): Recognize the new option.
	* makeint.h (OUTPUT_SYNC_JOB): Add new values for "job"
	* job.c (assign_child_tempfiles): In per-job mode, truncate the
	temp file for re-use by the next job.
	(sync_output): Don't close the temp files as we may still use them.
	(free_child): Close the temp files here as we definitely don't
	need them.
	(new_job): In per-job output mode, sync_output() after each job.
	* job.h (struct child): Avoid ifdefs.
	* make.1: Add new options to the man page.
	* doc/make.texi (Parallel Output): Break documentation on input
	and output into separate sections for readability.  Document the
	new "job" and "none" modes.

2013-04-27  Paul Smith  <psmith@gnu.org>

	* job.c (construct_command_argv_internal): Fix oneshell support
	for non-POSIX-sh shells.

	* load.c (load_object): Extract all POSIX-isms into a separate
	function for portability.
	(load_file): Check the .LOADED variable first and don't invoke
	load_object() if it's already been loaded.

2013-04-27  Eli Zaretskii  <eliz@gnu.org>
